[package]
name = "old_school_gfx_glutin_ext"
# Version should be inline with glutin target version
version = "0.29.2"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "Extensions for glutin to initialize & update old school gfx"
repository = "https://github.com/alexheretic/old-school-gfx-glutin-ext"
keywords = ["gamedev", "graphics", "gfx", "glutin"]
license = "Apache-2.0"
readme="README.md"

[dependencies]
glutin = { version = "0.29", default-features = false }
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"

[package.metadata.docs.rs]
features = ["glutin/x11"]

[dev-dependencies]
gfx = "0.18"
glutin = "0.29" # use default-features
