[package]
name = "old_school_gfx_glutin_ext"
version = "0.33.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "Extensions for glutin to initialize & update old school gfx"
repository = "https://github.com/alexheretic/old-school-gfx-glutin-ext"
keywords = ["gamedev", "graphics", "gfx", "glutin"]
license = "Apache-2.0"
readme="README.md"

[dependencies]
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
glutin = { version = "0.32", default-features = false }
glutin-winit = { version = "0.5", default-features = false }
raw-window-handle = "0.6.2"
winit = { version = "0.30", default-features = false }

[dev-dependencies]
gfx = "0.18.3"
# enable default features for examples
winit = { version = "0.30", default-features = true }

[features]
default = ["glutin-winit/default"]
